# TLARC

./: .csharpierrc  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Controller.cs  DecisionMaker_Base.cs  Dockerfile  FodyWeavers.xml  GimbalControl_Base.cs  Pathfinder_Base.cs  README.md  decision_maker.csproj  decision_maker.sln  emgu_install.sh  libxcb1  package.xml  tlarc.csproj  tlarc.sln  topiclist.txt
.devcontainer/: devcontainer.json
Advantageous/: DecisionMaker_Advantageous.cs  GimbalControl_Advantageous.cs  PathFinder_Advantageous.cs
Declaration/Component/: PathFinder.json  SimpleFSM.json  playFSM.json
Declaration/Gameobject/: ControlPos.json  CurisePosMain.json  CurisePosMain2.json  CurisePosMain3.json  HidePos.json  RechargePos.json  Sentry.json  sentry_revise.json  sentry_target.json
Disadvantageous/: DecisionMaker_Disadvantageous.cs  GimbalControl_Disadvantageous.cs  PathFinder_Disadvantageous.cs
Lib/: MvFGProducerCML.cti  MvFGProducerCXP.cti  MvFGProducerGEV.cti  MvFGProducerXoF.cti  libMVGigEVisionSDK.so.4.4.1.2  libMvCameraControlWrapper.so.4.4.1.2  libMvUsb3vTL.so.4.4.1.2
Universal/: DecisionMaker_Universal.cs  GimbalControl_Universal.cs  PathFinder_Universal.cs
conception/: gameobject.md
configuration/: ALPlanner.json  ALPlannerPathfinder.json  BuildMap.yaml  DecisionAndMove.yaml  HikCameraForEStation.yaml  MapBuilder.yaml  PlanAndMove.yaml  debug.yaml  example.yaml  example2.yaml
declarations/: ALPlannerDecisionMaker.json  ALPlannerPathfinder.json  FSM.json  Infomations.json  PathFiner.json  Transforms.json
docs/: TLARCKernel.md
maps/: Blank.json  CCStaticMap.json  RMUC2025.json  StaticDijkstraMap.json  alliance.tlm  hello.tlm  map.tlm  narrow.tlm  staticESDFMap.json  suzhou.tlm
maps/map1/: alliance.tlm  description.json  luoma.tlm
msg/: ros2cs.spec
src/ALPlanner/: ALPlanner.cs  ALPlanner.g.cs
src/Arm/: Scara2025.cs  SixAxis2025.cs
src/AutoExchangeOre/: AutoExchangeOre.cs  Scara2025AutoExchangeOre.cs
src/DecisionMaker/: DecisionMaker.cs  DecisionMakerEnums.cs
src/HikCamera/: VideoCapture.cs  VideoTest.cs
src/LearnToUse/: Example.cs
src/Maps/: IGridMap.cs  IMap.cs  ISafeCorridorGenerator.cs  SemanticESDF.cs
src/RapidlyArmPlanner/: AutoExchangeOre.cs
(+632 files in other folders)
